; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typelib.c_open_typelib.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typelib.c_open_typelib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @open_typelib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @open_typelib(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i8* @wpp_find_include(i8* %6, i32* null)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %16, label %10

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* @O_RDONLY, align 4
  %13 = load i32, i32* @O_BINARY, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @open(i8* %11, i32 %14)
  store i32 %15, i32* %2, align 4
  br label %25

16:                                               ; preds = %1
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* @O_RDONLY, align 4
  %19 = load i32, i32* @O_BINARY, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @open(i8* %17, i32 %20)
  store i32 %21, i32* %5, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @free(i8* %22)
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %16, %10
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i8* @wpp_find_include(i8*, i32*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
